<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextureView
                android:id="@+id/textureView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:scaleX="5"
                android:scaleY="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_focus" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/distance_between_you_and_object" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_between_two_objects" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height_of_object" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="16dp"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/aim_to_the_bottom_of_the_object_on_the_ground_when_measuring_distance"
            android:textColor="#F44336"
            android:textSize="18sp"
            tools:ignore="TextViewEdits" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type_your_height"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:autofillHints="170"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/personHeight"
                android:textSize="24sp"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btnShot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:text="@string/calculate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDistance1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance1"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvDistance11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textSize="24sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDistance2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/distance2"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/textureView"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/tvDistance22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/tvDistance1"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/distance"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvTotalDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>